# parrot

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CREDITS.md  README.md
docs/assets/: app_config.md  camera.md  entity_preset.md  image.md  light_source.md  material.md  model.md  render_object.md  scene_config.md  shader_source.md  texture_config.md  window_config.md
example/demo/: .app.json  .parrot.json  demo.parrot.json  main.scn.json  setup.cc
example/demo/entities/: root.entt.json
example/demo/images/: flat.img.json  parrot.img.json  wood.img.json
example/demo/materials/: dice.mat.json  flat.mat.json  model.mat.json  parrot.mat.json
example/demo/meshes/: cube.mesh.json  plane.mesh.json  sphere.mesh.json  teapot.mesh.json
example/demo/scenes/: main.scn.json
example/demo/scripts/: controller.hh  fps.hh  player_controller.hh  rotate.hh  sun.hh
example/demo/shaders/: flat.fs.glsl  flat.shader.json  flat.vs.glsl  model.program.glsl  model.shader.json
example/demo/textures/: flat.tex.json  parrot.tex.json  wood.tex.json
example/demo/windows/: main.wndw.json
example/pirate/: .app.json  setup.cc
example/pirate/materials/: flat.mat.json
example/pirate/scenes/: main.scn.json
example/pirate/scripts/: controller.hh  rotate.hh  sun.hh
example/pirate_bay/: setup.cc
example/pirate_bay/default/: flat.mat.json
example/pirate_bay/materials/: water.mat.json
example/pirate_bay/scenes/: main.scn.json
example/pirate_bay/scripts/: fps.hh  water_mesh.hh
example/teapot/: setup.cc
example/teapot/scripts/: controller.hh  fps.hh  rotate.hh
examples/pirate_bay/: .app.json  setup.cc
examples/pirate_bay/scripts/: controller.hh
examples/pirate_bay/shaders/: model.glsl.macro  water.glsl.macro
examples/teapot/: .app.json
examples/teapot/scenes/: main.scn.json
examples/teapot/scripts/: controller.hh  rotate.hh
scripts/: indent.py
src/: client.hh  common.hh  handle.hh  registry.hh  resource.cc  resource.hh  scriptable.cc  scriptable.hh  sidecar.cc  sidecar.hh  uuid.cc  uuid.hh
src/app/: app.cc  app.hh  app_config.cc  app_config.hh  component_registry.cc  component_registry.hh  default_scriptable.cc  default_scriptable.hh  entry.cc  playing_unit.cc  playing_unit.hh
src/asset/: asset.cc  asset.hh  asset_index.cc  asset_index.hh  asset_manager.cc  asset_manager.hh  asset_policy.hh  asset_registry.cc  asset_registry.hh  asset_resource.cc  asset_resource.hh  asset_view.hh  manager.cc  manager.hh  policy.hh  view.hh
src/asset/config/: app.hh  app_config.cc  app_config.hh  entity.hh  entity_config.cc  entity_config.hh  scene.hh  scene_config.hh  window.hh  window_config.cc
src/core/: app.cc  app.hh  app_config.cc  app_config.hh  asset.cc  asset.hh  asset_handle.hh  asset_handle_.hh  asset_path.cc  asset_path.hh  component_registry.cc  default_scriptable.cc  default_scriptable.hh  entry.cc  gpu.cc  gpu.hh  log.hh  playing_unit.cc  playing_unit.hh  registry.hh  script_registry.hh  scriptable.cc  scriptable.hh  uuid.cc  uuid.hh
src/debug/: debug.hh  engine_logger.hh  logger.cc  logger.hh
src/ecs/: component.cc  component.hh  component_registry.hh  entity.cc  entity.hh  entity_config.cc  entity_config.hh  entity_preset.cc  entity_preset.hh  scene.cc  scene.hh  scene_config.cc  scene_config.hh  script.cc  script.hh  transform.cc  transform.hh  uuid.cc  uuid.hh
src/ecs/components/: camera.cc  camera.hh  render.cc  render.hh  render_object.cc  render_object.hh  script.cc  script.hh
src/formats/: app_config.hh  entity_config.hh  scene_config.hh  window_config.hh
src/graphics/: batch_renderer.cc  batch_renderer.hh  camera.cc  camera.hh  context.cc  context.hh  gpu_context.hh  guard.cc  guard.hh  image.cc  image.hh  light_source.cc  light_source.hh  material.cc  material.hh  mesh.cc  mesh.hh  model.cc  model.hh  render_object.cc  render_object.hh  renderer.hh  scene_data.hh  shader.cc  shader.hh  shader_builder.cc  shader_builder.hh  shader_source.cc  shader_source.hh  texture.cc  texture.hh  texture_config.cc  texture_config.hh
src/graphics/opengl/: block3d_opengl.cc  block3d_opengl.hh  buffer_opengl.cc  buffer_opengl.hh  context_opengl.cc  context_opengl.hh  draw_opengl.cc  draw_opengl.hh  index_buffer_opengl.cc  index_buffer_opengl.hh  mesh_opengl.cc  mesh_opengl.hh  renderer_opengl.cc  renderer_opengl.hh  shader_opengl.cc  shader_opengl.hh  std140_opengl.cc  std140_opengl.hh  surface_opengl.cc  surface_opengl.hh  texture_opengl.cc  texture_opengl.hh  (+6 more)
src/math/: 3d.hh  basic.hh  basic_math.hh  math3d.hh  matrix.hh
src/utils/: image.cc  image.hh  math_3d.hh  math_basic.hh  math_matrix.hh  stopwatch.cc  stopwatch.hh
src/window/: event.cc  event.hh  window.cc  window.hh  window_config.cc  window_config.hh  window_event.cc  window_event.hh
test/: window_test.cc
test/demo/: main.wndw.json  setup.cc
(+4 files in other folders)
